[package]
name = "winit_keyboard_tester"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = "0.8.1"
glutin = "0.26.0"
pico-args = "0.4.1"
simple_logger = "1.11.0"
takeable-option = "0.4"
winit = { path = "../winit" }

[target.'cfg(not(target_arc = "wasm32"))'.dependencies]
simple_logger = "1.11.0"

[target.'cfg(target_arc = "wasm32")'.dependencies]
web-sys = "0.3.49"

[patch.crates-io]
winit = { path = "../winit" }
