[package]
name = "winit_keyboard_tester"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.14"
softbuffer = "0.2.0"
takeable-option = "0.4"
winit = { path = "../winit", default-features = false, features = ["x11"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "1.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2.0"
wasm-bindgen = "0.2.74"
web-sys = "0.3.49"
